src/tests/snapshots/tera__tests__parser__parser_errors@unexpected_operator.txt.snap
---
source: src/tests/parser.rs
expression: res.unwrap_err()
input_file: src/tests/parser_inputs/errors/unexpected_operator.txt
---
 Syntax error --> [unexpected_operator.txt:1:3]
  |
1 | {{ / }}
  |    ^---
  = Found `/` but expected one of: integer, float, string, bool, ident, `-`, `not`, `{`, `[` or `(`
        
